# CXXRestFullAPI

./: .gitignore  .travis.yml  CMakeLists.txt  DataBase.h  dataBase.cpp  dataBase.h  main.cpp  taskDataBase.cpp  taskDataBase.h  test.cpp  userDataBase.cpp  userDataBase.h
.github/workflows/: cmake.yml
.hooks/: commit-msg  post-update
inc/: connection.h  cryptographer.h  dataBase.h  fileDataBase.h  sha256.h  taskDataBase.h  userDataBase.h
lib/: CMakeLists.txt  connection.cpp  cryptographer.cpp  dataBase.cpp  fileDataBase.cpp  sha256.cpp  taskDataBase.cpp  userDataBase.cpp
scripts/: build.sh  cpplint.sh  deploy_dev.sh  deploy_master.sh
